tests/tooling/fixtures/native/execution/negative/parameter_bool_pointer_declarator_unsupported.objc3
module ParameterBoolPointerDeclaratorUnsupported;

fn choose(flag: bool*) -> i32 {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  return choose(1);
}
